--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,22 @@ body {
 .mt-4{
   margin-top: 4.5rem !important;
 }
+.prod a{
+  display: flex;
+}
+.fs{
+  font-size: 0.8rem!important;
+}
+
 
 a {
-  color: #070d0f;
-  font-weight: bold;
+  color:#fff;
+  /* font-weight: bold; */
   text-decoration: none;
 }
 
 a:hover {
-  color: #0374a8;
+  color: #95d5f5;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -116,6 +123,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #header {
   transition: all 0.5s;
+  background: #37517e;
   z-index: 997;
   padding: 15px 0;
 }
@@ -256,7 +264,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* Get Startet Button */
+/* Login Button */
 .get-started-btn {
   margin-left: 25px;
   color: #fff;
@@ -267,25 +275,28 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   display: inline-block;
   border: 2px solid #47b2e4;
-  font-weight: 600;
+  font-weight: 500;
+ 
+
+
 }
 
 .get-started-btn:hover {
   background: #31a9e1;
-  color: #fff;
+  color: #fff !important;
 }
 
 @media (max-width: 768px) {
   .get-started-btn {
-    margin: 0 48px 0 0;
-    padding: 6px 20px 7px 20px;
-  }
+    margin: 14px 125px 3px 126px !important;
+    transform: skewX(-8deg);
+    }
 }
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  top: 20px;
+  top: 19px!important;
   right: 15px;
   z-index: 9998;
   border: 0;
@@ -299,74 +310,59 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #fff;
+  color: rgb(255, 255, 255);
 }
 
 .mobile-nav {
   position: fixed;
-  top: 55px;
-  right: 15px;
-  bottom: 15px;
-  left: 15px;
-  z-index: 9999;
+  top: 1px;
+  right: -190px;
+  bottom: 1px;
+  left: 150px;
+  z-index: 9997;
   overflow-y: auto;
-  background: #fff;
+  background: #1358be;
   transition: ease-in-out 0.2s;
   opacity: 0;
   visibility: hidden;
-  border-radius: 10px;
+  /* border-radius: 50%; */
+  transform: skew(14deg) translateX(-23%);
+  transition: all 0.275s 0.1s;
   padding: 10px 0;
 }
 
 .mobile-nav * {
-  margin: 0;
+  margin: auto;
+  margin-left: 2%;
+  margin-top: 4vh;
   padding: 0;
+  transform: skewX(-8deg);
   list-style: none;
 }
 
 .mobile-nav a {
   display: block;
-  position: relative;
-  color: #37517e;
-  padding: 10px 20px;
-  font-weight: 500;
-  outline: none;
+    text-align: center;
+    color: #fff;
+    animation-name: inherit;
+    font-size: 28px;
+    position: relative;
+    padding: 0 0 0 20px;
+    opacity: 1;
+    transform: translateY(38px);
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #47b2e4;
+  /* color: #47b2e4; */
+  font-weight: bold;
+  transition: ease-in-out  all 0.3s;
   text-decoration: none;
-}
-
-.mobile-nav .drop-down > a:after {
-  content: "\ea99";
-  font-family: IcoFont;
-  padding-left: 10px;
-  position: absolute;
-  right: 15px;
-}
-
-.mobile-nav .active.drop-down > a:after {
-  content: "\eaa1";
-}
-
-.mobile-nav .drop-down > a {
-  padding-right: 35px;
-}
-
-.mobile-nav .drop-down ul {
-  display: none;
-  overflow: hidden;
-}
-
-.mobile-nav .drop-down li {
-  padding-left: 20px;
 }
 
 .mobile-nav-overly {
   width: 100%;
   height: 100%;
-  z-index: 9997;
+  z-index: 9995;
   top: 0;
   left: 0;
   position: fixed;
@@ -381,12 +377,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-active .mobile-nav {
-  opacity: 1;
+  opacity: 2;
   visibility: visible;
 }
 
 .mobile-nav-active .mobile-nav-toggle i {
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .get-started-btn {
+    margin: 0 48px 0 0;
+    padding: 6px 20px 7px 20px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -539,7 +542,10 @@ section {
 }
 
 .section-bg {
-  background-color: #f3f5fa;
+  background:#37517e;
+}
+.section-bg-1{
+  background:#e2e2e4;
 }
 
 .section-title {
@@ -595,7 +601,7 @@ section {
   max-width: 45%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
-  padding: 15px 0;
+  padding: 15px 7px;
   
 }
 
@@ -607,8 +613,12 @@ section {
 
 @media (max-width: 768px) {
   .cliens img {
-    max-width: 40%;
+    max-width: 59%;
+    padding: 15px 0;
   }
+  .fs-6 {
+    font-size: 0.7rem!important;
+}
 }
 
 /*--------------------------------------------------------------
@@ -1460,6 +1470,109 @@ section {
   color: #4668a2;
   content: "/";
 }
+/* *--------------------------------------------------------------
+# Testimonials
+--------------------------------------------------------------*/ 
+.testimonials {
+  padding: 80px 0;
+  /* background: url("../img/cta-bg.jpg") no-repeat; */
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+}
+
+.testimonials::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  /* background: rgba(106, 96, 250, 0.9); */
+}
+
+.testimonials .section-header {
+  margin-bottom: 40px;
+}
+
+.testimonials .testimonial-item {
+  text-align: center;
+  color: rgb(10, 10, 10);
+}
+
+.testimonials .testimonial-item .testimonial-img {
+  width: 100px;
+  border-radius: 50%;
+  border: 6px solid rgba(255, 255, 255, 0.15);
+  margin: 0 auto;
+}
+
+.testimonials .testimonial-item h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px 0 5px 0;
+  color: rgb(14, 13, 13);
+}
+
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: rgb(26, 25, 25);
+  margin: 0 0 15px 0;
+}
+
+.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+  color: rgba(51, 49, 49, 0.4);
+  font-size: 26px;
+}
+
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 auto 15px auto;
+  color: rgb(36, 35, 35);
+}
+
+.testimonials .owl-nav, .testimonials .owl-dots {
+  margin-top: 5px;
+  text-align: center;
+}
+
+.testimonials .owl-dot {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.4) !important;
+}
+
+.testimonials .owl-dot.active {
+  background-color: #49b5e7 !important;
+}
+
+@media (min-width: 1024px) {
+  .testimonials {
+    background-attachment: fixed;
+  }
+}
+
+@media (min-width: 992px) {
+  .testimonials .testimonial-item p {
+    width: 80%;
+  }
+}
 
 /*--------------------------------------------------------------
 # Portfolio Details
@@ -1558,6 +1671,7 @@ section {
 
 #footer .footer-newsletter {
   padding: 50px 0;
+  outline-style: none;
   background: #f3f5fa;
   text-align: center;
   font-size: 15px;
@@ -1623,10 +1737,116 @@ section {
   margin: 0 0 10px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
-  text-transform: uppercase;
   font-weight: 600;
   color: #37517e;
 }
+/*product selection */
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css);
+.col-item
+{
+    border: 1px solid #E1E1E1;
+    border-radius: 5px;
+    background: #FFF;
+}
+.col-item .photo img
+{
+    margin: 0 auto;
+    width: 100%;
+}
+
+.col-item .info
+{
+    padding: 10px;
+    border-radius: 0 0 5px 5px;
+    margin-top: 1px;
+}
+
+.col-item:hover .info {
+    background-color: #F5F5DC;
+}
+.col-item .price
+{
+    /*width: 50%;*/
+    float: left;
+    margin-top: 5px;
+}
+
+.col-item .price h5
+{
+    line-height: 20px;
+    margin: 0;
+}
+
+.price-text-color
+{
+    color: #219FD1;
+}
+
+.col-item .info .rating
+{
+    color: #777;
+}
+
+.col-item .rating
+{
+    /*width: 50%;*/
+    float: left;
+    font-size: 17px;
+    text-align: right;
+    line-height: 52px;
+    margin-bottom: 10px;
+    height: 52px;
+}
+
+.col-item .separator
+{
+    border-top: 1px solid #E1E1E1;
+}
+
+.clear-left
+{
+    clear: left;
+}
+
+.col-item .separator p
+{
+    line-height: 20px;
+    margin-bottom: 0;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.col-item .separator p i
+{
+    margin-right: 5px;
+}
+.col-item .btn-add
+{
+    width: 50%;
+    float: left;
+}
+
+.col-item .btn-add
+{
+    border-right: 1px solid #E1E1E1;
+}
+
+.col-item .btn-details
+{
+    width: 50%;
+    float: left;
+    padding-left: 10px;
+}
+.controls
+{
+    margin-top: 20px;
+}
+[data-slide="prev"]
+{
+    margin-right: 10px;
+}
+
+/*End product selection */
 
 #footer .footer-top .footer-contact p {
   font-size: 14px;
